revertTitlebar - fix z-index for notice

--- a/revertTitlebar/themefile_notice.css
+++ b/revertTitlebar/themefile_notice.css
@@ -6,4 +6,5 @@
     left: 70px;
     margin-top: 48px;
     border-radius: 0;
+    z-index: 101;
 }
